# vivified

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  .ragignore  AGENTS.md  CNAME  Dockerfile.api  HANDOFF_DOCS_FIX.md  Makefile  README.md  alembic.ini  check_available_models.py  config.defaults.json  conftest.py  constraints.txt  docker-compose.yml  extract_prompt.py  generate_docs_catchup.py  generate_full_docs_now.sh  index.html  mkdocs.yml  mkdocs.yml.bak  mypy.ini  netlify.toml  notifications_plan.md  test_docs_generation.py  test_embedded_assistant.sh  test_material_docs.py  versions.json  vivified.db
.venv-docs/: pyvenv.cfg
admin/: Dockerfile.ui  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
ai-dev-20250929-023635/: 404.html  index.html  sitemap.xml
core/: Dockerfile  __init__.py  database.py  entrypoint.sh  main.py  plugin_interface.py  requirements.txt
dev/: 404.html  index.html  sitemap.xml
docs/: admin-console.md  api-reference.md  backup.md  configuration.md  contributing.md  deployment.md  getting-started-material.md  getting-started.md  index.md  installation.md  merge_queue.md  monitoring.md  notifications.md  requirements.txt  security.md  (+1 more)
sdk/python/: README.md  pyproject.toml
sdk/python/src/vivified_sdk/: __init__.py  client.py  plugin.py
sdk/python/src/vivified_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sdk/python/tests/: test_client.py  test_plugin_sdk.py
tools/cli/: pyproject.toml  setup.py  vivi.py
tools/cli/plugins/example_plugin/: manifest.json
tools/cli/vivified_cli/: main.py
tools/cli/vivified_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
vivified-bootstrap/vivified_cli/: pyproject.toml
vivified-bootstrap/vivified_cli/src/vivified_cli/: __main__.py
vivified_api/: pyproject.toml
vivified_api/src/vivified_api/: main.py
vivified_api/src/vivified_api.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+458 files in other folders)
