[project]
name = "vivified-api"
version = "0.0.1"
description = "Vivified FastAPI server"
requires-python = ">=3.11"
dependencies = ["fastapi>=0.115.0","uvicorn>=0.30.0","vivified-core>=0.0.1"]

[project.scripts]
vivified-api = "vivified_api.main:run"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
