[project]
name = "vivi-api"
version = "0.0.1"
description = "Vivi FastAPI server"
requires-python = ">=3.11"
dependencies = ["fastapi>=0.115.0","uvicorn>=0.30.0","vivi-core>=0.0.1"]

[project.scripts]
vivi-api = "vivified_api.main:run"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
