[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vivified-sdk"
version = "0.1.0"
description = "Vivified SDK for building plugins"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "httpx>=0.24.0",
  "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
]

[tool.setuptools.packages.find]
where = ["src"]

