[project]
name = "vivified-cli"
version = "0.0.1"
description = "Vivified CLI"
requires-python = ">=3.11"
dependencies = ["typer>=0.12.5","vivified-core>=0.0.1"]

[project.scripts]
vivi = "vivified_cli.__main__:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
